# zinabre

./: Cargo.toml  README.md
clusters/my-cluster/: podinfo-kustomization.yaml
clusters/my-cluster/flux-system/: gotk-sync.yaml
src/: main.rs
