[package]
name = "zinabre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["full"] }
